# ScalaPodcaster4

.github/workflows/: build-macos.yml  build-windows.yml
ScalaPodcaster4/: CMakeLists.txt
ScalaPodcaster4/Source/: EQGraphComponent.cpp  EQGraphComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
ScalaPodcaster4/Source/DSP/: CompressorProcessor.h  DeEsserProcessor.h  EQProcessor.h  FadeProcessor.h  LufsProcessor.h  SpectrumAnalyzer.h
ScalaPodcaster4/dev/: editor_screenshot.cpp  editor_smoke_test.cpp
